<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main" >
    <item android:id="@+id/aBaricon"
        android:icon="@drawable/ticonbig"
        android:title="@string/app_name"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nuevaTarea"
        android:title="@string/nuevaTarea"
        app:showAsAction="never"/>
    <item
        android:id="@+id/cambiarPass"
        android:title="@string/canbiarPass"
        app:showAsAction="never"/>
    <item
        android:id="@+id/acercaDe"
        android:title="@string/acercaDe"
        app:showAsAction="never"
        />
</menu>