<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".DescriptareaActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <EditText
            android:id="@+id/nombre2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:editable="false"
            android:ems="10"
            android:hint="@string/nombre"
            android:importantForAutofill="no"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/descripcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:editable="false"
            android:ems="12"
            android:hint="@string/descripcion"
            android:importantForAutofill="no"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/prioridad2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:editable="false"
            android:ems="6"
            android:hint="@string/prioridad"
            android:importantForAutofill="no"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/fecha2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:editable="false"
            android:ems="6"
            android:hint="@string/dd_mm_yyyy"
            android:importantForAutofill="no"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/coste2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:editable="false"
            android:ems="6"
            android:hint="@string/coste"
            android:importantForAutofill="no"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@color/colorPrimaryDark" />

        <CheckBox
            android:id="@+id/cboxRealizada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Realizada" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnModificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Modificar" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/borrar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGuadar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Guardar"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/descripcion_tarea"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>